# predictions-sandbox

./: .env.example  .gitignore  CLAUDE.md  LICENSE  PROJECT.md  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: settings.py
config/prompts/: __init__.py  v1_baseline.py  v2_market_aware.py
dashboard/: app.py  queries.py  routes.py
dashboard/templates/: base.html  calibration.html  costs.html  index.html  market_detail.html  markets.html  trades.html
docs/plans/: 2026-03-22-phase1-scaffold.md
scripts/: analyze_confidence.py  analyze_search_coverage.py  backfill_tags.py  check_health.py  export_stories.py  nightly_calibration.py  resolve_predictions.py  run_backtest.py  run_category_analysis.py  run_daily_summary.py  run_pipeline.py  setup_pi.sh
src/analysis/: ensemble.py  estimator.py  prompts.py
src/backtesting/: backtest.py
src/content/: __init__.py  story_collector.py
src/db/: connection.py  migrations.py  models.py
src/markets/: manifold.py  polymarket.py  scanner.py
src/notifications/: telegram.py
src/tracking/: calibration.py  logger.py  performance.py
src/trading/: executor.py  kelly.py  risk.py
tests/: test_backtest.py  test_calibration.py  test_db.py  test_estimator.py  test_kelly.py  test_pipeline_dedup.py  test_retry.py  test_risk.py  test_scanner.py  test_telegram.py
